# riscv_sim

./: CMakeLists.txt  README.md  main.c
include/: ui.h
input/: riscv_test.txt  strlen_bin.txt
src/: CMakeLists.txt  decodeur.c  processeur.c
test/: CMakeLists.txt  projet1.c  projet1.h  test_decodeur.c  test_processeur.c
ui/: CMakeLists.txt  ui.c
