CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(projet1 C)

SET(CMAKE_C_STANDARD 99)

file(GLOB TEXT_FILE "./input/*.txt")
file(COPY ${TEXT_FILE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/input)

file(GLOB IMG "./images/*.*")
file(COPY ${IMG} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/images)

file(GLOB INCLUDES "./include/*.h")
file(COPY ${INCLUDES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(test)